Fix cards with wrong color

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -495,6 +495,11 @@ header .cards-submenu p:nth-child(2) a {
   padding: 2px 5px;
 }
 
+header .white-background p:nth-child(2) a {
+  background-color: var(--text-white);
+  color: var(--text-gray);
+}
+
 header .cards-submenu .expanded-image img {
   margin: 0 auto;
   padding: 0;
